--- a/styles-contact.css
+++ b/styles-contact.css
@@ -53,14 +53,16 @@ table {
 
 
 
-/* ---------- Hello, my name is YOUR NAME GOES HERE and this is the beginning of my CONTACT PAGE CSS for 318 Digital Typography November 2019 ------------ */
+/* ---------- Hello, my name is Michelle Jenkins and this is the beginning of my CONTACT PAGE CSS for 201 Digital Publishing March 2022 ------------ */
 
 html, body {
   height: 100%;
   width: 100%;
   padding: 0;
   margin: 0;
-  background: #404040; 
+  background: url(images/bricks_bg.jpg)
+		center center fixed no-repeat;
+	background-size: cover; 
 	
 	
 }
@@ -82,27 +84,49 @@ html, body {
 }
 
 h1 {
-	/* FONT-FAMILY GOES HERE CHOOSE FROM ADOBE FONTS OR GOOGLE FONTS */
+	font-family: garamond, serif;
 	font-size: 2em;
     margin: 0px auto 10px auto;
     color: #fff;
 }
 
 h2 {
-	 /* FONT-FAMILY GOES HERE CHOOSE FROM ADOBE FONTS OR GOOGLE FONTS */
-	font-size: 1.5em;
-    line-height: 1.4;
-    color: #fff;
-    padding: 0px 0px;
-    margin: 0px auto 25px auto;
+	 font-family: garamond, serif;
+	 font-size: 2em;
+	 margin: 0px auto 10px auto;
+	 color: #fff;
 }
 
 p {
-	/* FONT-FAMILY GOES HERE CHOOSE FROM ADOBE FONTS OR GOOGLE FONTS */		 
-	font-size: 1.2em;
-    line-height: 1.6;
+	font-family: garamond, serif;
+	font-size: 2em;
+    margin: 0px auto 10px auto;
     color: #fff;
 }
     
-    
-
+  nav{
+	  font-family: garamond;
+	  font-size: 1.2em;
+	  width: 400px;
+	  margin: 0 auto;
+	  border: dashed turquoise;
+	  border-width: 3px 0;
+	  text-align: center;
+	  margin-top: 2em;
+  	}  
+  nav li{
+	  display: inline;
+ 		}
+  nav a{
+	  display: inline-block;
+	  padding: 10 px;
+	   }
+  a{
+	color: #444;
+	text-decoration: none;
+	font-weight: bold;
+   }
+  a:hover{
+	color:black;
+	background:pink;
+         }
